Release ContextProviderCommandBuffer reference on media thread

GpuVideoAcceleratorFactoriesImpl calls BindToCurrentThread() on media task
runner, so releasing the reference should also happen there to avoid race
conditions. crrev.com/c/959432 introduced the regression, since we took
care of initialization, but we didn't take care of destruction.

Bug: 826539, 580386
Change-Id: I2fff505b445bca7ff38343f6f1e5d3035a06714e
Reviewed-on: https://chromium-review.googlesource.com/984438
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Commit-Queue: Emircan Uysaler <emircan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546725}
Former-commit-id: b0f69fcfb9dc32b5dd037dc6b99c968225d870d6