content/renderer/media/gpu/gpu_video_accelerator_factories_impl.h
@@ -107,8 +107,7 @@ class CONTENT_EXPORT GpuVideoAcceleratorFactoriesImpl
 
   void SetRenderingColorSpace(const gfx::ColorSpace& color_space) override;
 
-  void ReleaseContextProvider();
-  scoped_refptr<ui::ContextProviderCommandBuffer> ContextProviderMainThread();
+  bool CheckContextProviderLost();
 
   ~GpuVideoAcceleratorFactoriesImpl() override;
 
@@ -126,16 +125,19 @@ class CONTENT_EXPORT GpuVideoAcceleratorFactoriesImpl
   void BindVideoEncodeAcceleratorProviderOnTaskRunner(
       media::mojom::VideoEncodeAcceleratorProviderPtrInfo unbound_vea_provider);
 
+  void ReleaseContextProvider();
+  void SetContextProviderLost();
+
   const scoped_refptr<base::SingleThreadTaskRunner> main_thread_task_runner_;
   const scoped_refptr<base::SingleThreadTaskRunner> task_runner_;
   const scoped_refptr<gpu::GpuChannelHost> gpu_channel_host_;
 
-  // Shared pointer to a shared context provider that should be accessed
-  // and set only on the main thread.
-  scoped_refptr<ui::ContextProviderCommandBuffer> context_provider_refptr_;
-
-  // Raw pointer to a context provider accessed from the media thread.
-  ui::ContextProviderCommandBuffer* context_provider_;
+  // Shared pointer to a shared context provider. It is initially set on main
+  // thread, but all subsequent access and destruction should happen only on the
+  // media thread.
+  scoped_refptr<ui::ContextProviderCommandBuffer> context_provider_;
+  // Signals if |context_provider_| is alive on the media thread.
+  bool context_provider_lost_;
 
   base::UnguessableToken channel_token_;
 
